Fix CSS specificity issue with SVG icon spacing

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -68,13 +68,15 @@ body, html, #page-wrapper, .page__content, .page__inner-wrap, #main, .wrapper, .
       padding: 0;
       line-height: 1.5;
       margin-bottom: 1em;
-      padding-left: 1.5em;
+      padding-left: 2.5em;
       position: relative;
 
-      i {
+      i, svg {
         position: absolute;
         left: 0;
         top: 0.25em;
+        width: 2em;
+        text-align: center;
         color: #0066cc;
       }
     }
